# global-topics-remapping

./: LICENSE  README.md  change_name.py
test_ws/src/beginner_tutorials/launch/: pub_sub.launch
test_ws/src/beginner_tutorials/scripts/: cmd_vel_publisher.py  cmd_vel_subscriber.py  listener.py  talker.py  turtle_pub.py
test_ws/src/global_topics_remapper/: CMakeLists.txt  package.xml
test_ws/src/global_topics_remapper/config/: remapping_params.yaml
test_ws/src/global_topics_remapper/scripts/: remap_topics_executable.py
